--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,5 +4,7 @@ services:
     build:
       dockerfile: dockerfile
       context: .
+    volumes:
+      - ./my-site:/my-code
     ports:
       - 9000:80
